@@ -1,6 +1,9 @@
 # ChangeLog file for MonetDB
 # This file is updated with Maddlog
 
+* Thu Dec  3 2015 Sjoerd Mullender <sjoerd@acm.org>
+- Removed BATcross1.  Use BATsubcross instead.
+
 * Thu Oct  8 2015 Sjoerd Mullender <sjoerd@acm.org>
 - Removed all versions of the SORTloop macro.
 
